atualização e correções